--- CHANGELOG ---
--- PyFMI-FUTURE ---

--- PyFMI-2.17.3 ---
    * Fixed a race-condition in using ResultDymolaBinary.get_variables_data().

--- PyFMI-2.17.2 ---
    * Fixed an issue for dynamic_diagnostics, where failures to evaluate the Jacobian would result in invalid XML.
    * Fixed a bug introduced in PyFMI 2.17.1 that could when retreiving variables with very large value references in CoupledFMUModelME2.

--- PyFMI-2.17.1 ---
    * Fixed compilation issue with Cython 3.1.
    * Added a new flag for building which allows the user to specify the exact name of the FMIL library.

--- PyFMI-2.17.0 ---
    * Refactored internal files, this does affect a small number of secondary imports.
    * New function `get_unpacked_fmu_path` for the `FMUModel(CS|ME)X` classes. Returns
      the absolute path of the unpacked FMU.
    * Fixed an issue with retrieving `@Diagnostics.cpu_time` via `get_variables_data`.

--- PyFMI-2.16.3 ---
    * Changed default log and file size limitations from 2 GiB (2*1024**3) to 2 GB (2e9).
      Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
    * Clarified that the `filter` option only applies to model variables.
    * Fixed a bug introduced in PyFMI 2.15 where the diagnostics trajectory for CPU time was
      returned as CPU time per step instead of cumulative CPU time.

--- PyFMI-2.16.2 ---
    * Increased robustness of getting the `supports` attribute from ResultHandlers.
    * Fixed an Exception when using `dynamic_diagnostics` and scalar `atol`.
    * Updated FMIL used in GitHub workflows to version 3.0a4, updated setup.py to account for changes in FMIL.

--- PyFMI-2.16.1 ---
    * Fixed an issue with `get_variables_data` returning full trajectories when mixed with `get_variable_data` calls.

--- PyFMI-2.16.0 ---
    * Added verification against the available free disk space when storing the result on disk (i.e. a protection
      against running out of disk space).